maze.island.IslandMaze.scala.code
override def run() {
  var test=false
  while(getY()>0 && test==false){
    nord()
  }
  test=true
  droite();droite()
  while(!estSureBiscuit()){
    keeHandOnSideWall()
  }
  prendBiscuit()
}

def keeHandOnSideWall(){
  gauche()
  while(estFaceMur()==true){
    droite()
  }
  avance()
}

def nord(){
  if(!estFaceMur()){
    avance()
  }else{
    while(estFaceMur()){
      droite()
    }
    avance()
  }
  setDirection(Direction.NORTH)
}